@@ -1,0 +1,6 @@
+<metadata>
+ <version>1001</version>
+ <dependencies>
+  <dependency>profile-collective.simplemanagement:default</dependency>
+ </dependencies>
+</metadata>
